--- a/app.css
+++ b/app.css
@@ -15,6 +15,11 @@
   font-family: Poppins, sans-serif;
 }
 
+::selection {
+  background-color: var(--bg-red);
+  color: white;
+}
+
 /* html {
   font-size: 62.5%;
 } */
